<resources>
    <string name="app_name">TravelApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_country">Country</string>
    <string name="action_sign_in">Login</string>
    <string name="prompt_destination">Enter Destination</string>
    <string name="reg_action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="info_btn">Get Destination Information</string>
    <string name="flight_btn">Flights to Destination</string>
    <string name="dest_btn">Select This Destination</string>
    <string name="curr_btn">Currency Converter</string>
    <string name="translate_btn">Translate Phrase</string>
    <string name="error_invalid_email">Invalid, accepted email format is digits@digits.digits</string>
    <string name="error_email_not_in_use">No account associated with this email, please use register link</string>
    <string name="duplicate_email">Invalid, email already in use</string>
    <string name="error_invalid_password">Invalid, password must be greater than 6 characters and contain upper, lower and numeric characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_wrong_password">Password does not match email</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_register">Sign up</string>
    <string name="map_activity">Map of Destination</string>
    <string name="prompt_cashIn">Enter Amount</string>
    <string name="prompt_cashOut">Output</string>
    <string name="action_convert">Convert</string>
    <string name="log">Back to Login Page</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
